crates/ruff_python_parser/tests/snapshots/invalid_syntax@nonlocal_stmt_empty.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/nonlocal_stmt_empty.py
---
## AST

```
Module(
    ModModule {
        range: 0..9,
        body: [
            Nonlocal(
                StmtNonlocal {
                    range: 0..8,
                    names: [],
                },
            ),
        ],
    },
)
```
## Errors

error: Invalid syntax
  |
1 | nonlocal
  |         ^ Nonlocal statement must have at least one name
  |
